[project]
name = "factoringp-testing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.15.2",
    "cryptography>=44.0.2",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
